# macremote

./: .gitignore  CLAUDE.md  README.md
app/: App.tsx  app.json  eas.json  index.ts  package-lock.json  package.json  theme.ts
design/: DESIGN-BRIEF.md  DIAL-BRIEF.md  index.html  vercel.json
extension/: README.md  background.js  build.sh  manifest.firefox.json  manifest.json  options.css  options.html  options.js
hammerspoon/: macremote.lua
server/: .env.example  main.py  pyproject.toml
server/app_util/: log_util.py
server/common_helper/: auth.py  bgm_bridge.py  ddc_bridge.py  decorators.py  discord_alert.py  hs_bridge.py  lua_snippets.py  version.py
server/config/: settings.py
server/handler/: audio_apps_handler.py  brightness_handler.py  browser_sessions.py  displays_handler.py  input_handler.py  media_handler.py  sleep_timer_handler.py  status_handler.py  system_handler.py  volume_handler.py  windows_handler.py
server/routers/: apps.py  audio.py  brightness.py  browser.py  displays.py  input.py  media.py  meta.py  sleep_timer.py  status.py  system.py  volume.py  windows.py
server/tests/: conftest.py  test_audio_apps.py  test_auth.py  test_blackout.py  test_bridge_sanitize_and_throttle.py  test_brightness.py  test_browser.py  test_ddc_bridge.py  test_discord_alert.py  test_displays.py  test_hs_bridge.py  test_hs_bridge_retry.py  test_input_and_apps.py  test_media.py  test_media_seek.py  test_sleep_timer_api.py  test_sleep_timer_service.py  test_status.py  test_system.py  test_system_extra.py  test_version_health.py  test_volume.py  test_windows.py
(+55 files in other folders)
